# 5g-nr-positioning-future-extensions

./: .gitignore  LICENSE  README.md  main.py  requirements.txt
lib/sbi/amf-communication/: CMakeLists.txt  README.md
lib/sbi/amf-communication/.openapi-generator/: FILES
lib/sbi/amf-communication/api/: IndividualSubscriptionDocumentAPI.c  IndividualSubscriptionDocumentAPI.h  IndividualUeContextDocumentAPI.c  IndividualUeContextDocumentAPI.h  N1N2IndividualSubscriptionDocumentAPI.c  N1N2IndividualSubscriptionDocumentAPI.h  N1N2MessageCollectionCollectionAPI.c  N1N2MessageCollectionCollectionAPI.h  N1N2SubscriptionsCollectionForIndividualUEContextsCollectionAPI.c  N1N2SubscriptionsCollectionForIndividualUEContextsCollectionAPI.h  NonUEN2MessageNotificationIndividualSubscriptionDocumentAPI.c  NonUEN2MessageNotificationIndividualSubscriptionDocumentAPI.h  NonUEN2MessagesCollectionCollectionAPI.c  NonUEN2MessagesCollectionCollectionAPI.h  NonUEN2MessagesSubscriptionsCollectionCollectionAPI.c  NonUEN2MessagesSubscriptionsCollectionCollectionAPI.h  SubscriptionsCollectionCollectionAPI.c  SubscriptionsCollectionCollectionAPI.h
lib/sbi/amf-communication/docs/: IndividualSubscriptionDocumentAPI.md  IndividualUeContextDocumentAPI.md  N1N2IndividualSubscriptionDocumentAPI.md  N1N2MessageCollectionCollectionAPI.md  N1N2SubscriptionsCollectionForIndividualUEContextsCollectionAPI.md  NonUEN2MessageNotificationIndividualSubscriptionDocumentAPI.md  NonUEN2MessagesCollectionCollectionAPI.md  NonUEN2MessagesSubscriptionsCollectionCollectionAPI.md  SubscriptionsCollectionCollectionAPI.md  a2x_context.md  a2x_information.md  abnormal_behaviour.md  access_token_err.md  access_token_req.md  access_type.md  accuracy.md  accuracy_any_of.md  accuracy_info.md  accuracy_req.md  additional_measurement.md  addr_fqdn.md  address_list.md  allowed_nssai.md  allowed_snssai.md  am_policy_info_container.md  ambr.md  amf_event.md  amf_event_area.md  amf_event_mode.md  amf_event_mode_muting_exc_instructions.md  amf_event_subscription.md  amf_event_subscription_add_info.md  amf_event_trigger.md  amf_event_trigger_any_of.md  amf_event_type.md  amf_event_type_any_of.md  amf_status_change_notification.md  amf_status_info.md  analytics_accuracy_indication.md  analytics_accuracy_indication_any_of.md  (+482 more)
lib/sbi/amf-communication/model/: a2x_context.c  a2x_context.h  a2x_information.c  a2x_information.h  abnormal_behaviour.c  abnormal_behaviour.h  access_token_err.h  access_token_req.c  access_type.c  access_type.h  accuracy.c  accuracy.h  accuracy_any_of.c  accuracy_any_of.h  accuracy_info.c  accuracy_info.h  accuracy_req.c  accuracy_req.h  additional_measurement.c  additional_measurement.h  addr_fqdn.c  addr_fqdn.h  address_list.c  address_list.h  allowed_nssai.c  allowed_nssai.h  allowed_snssai.c  allowed_snssai.h  am_policy_info_container.c  am_policy_info_container.h  ambr.c  ambr.h  amf_event.c  amf_event.h  amf_event_area.c  amf_event_area.h  amf_event_mode.c  amf_event_mode.h  amf_event_mode_muting_exc_instructions.c  amf_event_mode_muting_exc_instructions.h  (+988 more)
lib/sbi/amf-communication/src/: apiClient.c  list.c
lib/sbi/amf-communication/unit-test/: test_a2x_context.c  test_a2x_information.c  test_abnormal_behaviour.c  test_access_token_err.c  test_access_token_req.c  test_accuracy.c  test_accuracy_any_of.c  test_accuracy_info.c  test_accuracy_req.c  test_additional_measurement.c  test_addr_fqdn.c  test_address_list.c  test_allowed_nssai.c  test_allowed_snssai.c  test_am_policy_info_container.c  test_ambr.c  test_amf_event.c  test_amf_event_area.c  test_amf_event_mode.c  test_amf_event_mode_muting_exc_instructions.c  test_amf_event_subscription.c  test_amf_event_subscription_add_info.c  test_amf_event_trigger.c  test_amf_event_trigger_any_of.c  test_amf_event_type.c  test_amf_event_type_any_of.c  test_amf_status_change_notification.c  test_amf_status_info.c  test_analytics_accuracy_indication.c  test_analytics_accuracy_indication_any_of.c  test_analytics_feedback_info.c  test_analytics_metadata.c  test_analytics_metadata_any_of.c  test_analytics_metadata_indication.c  test_analytics_metadata_info.c  test_analytics_subscription.c  test_analytics_subset.c  test_analytics_subset_any_of.c  test_app_list_for_ue_comm.c  test_application_volume.c  (+472 more)
lib/sbi/gmlc-location/: CMakeLists.txt  README.md
lib/sbi/gmlc-location/.openapi-generator/: FILES
lib/sbi/gmlc-location/api/: CancelLocationAPI.c  CancelLocationAPI.h  PrivacyCheckIdMappingAPI.c  PrivacyCheckIdMappingAPI.h  RequestLocationAPI.c  RequestLocationAPI.h  RequestRangingAPI.c  RequestRangingAPI.h  UELocationInformationSubscriptionCreationAPI.c  UELocationInformationSubscriptionCreationAPI.h  UpdateLocationAPI.c  UpdateLocationAPI.h
lib/sbi/gmlc-location/docs/: CancelLocationAPI.md  PrivacyCheckIdMappingAPI.md  RequestLocationAPI.md  RequestRangingAPI.md  UELocationInformationSubscriptionCreationAPI.md  UpdateLocationAPI.md  access_token_err.md  access_token_req.md  alert_limit.md  area_event_info_addition.md  area_event_info_ext.md  cancel_loc_data.md  civic_address.md  event_notify_data.md  event_notify_data_additional_info.md  event_notify_data_ext.md  event_notify_data_type.md  external_client_type.md  failure_cause.md  fix_type.md  gad_shape.md  gnss_positioning_method_and_usage.md  high_accuracy_gnss_metrics.md  horizontal_velocity.md  horizontal_velocity_with_uncertainty.md  indoor_outdoor_ind.md  input_data.md  input_ranging_data.md  integrity_requirements.md  lcs_qos_class.md  lcs_service_auth.md  lcs_service_auth_any_of.md  loc_update_data.md  loc_update_notification.md  loc_update_subs.md  local2d_point_uncertainty_ellipse.md  local2d_point_uncertainty_ellipse_all_of.md  local3d_point_uncertainty_ellipsoid_all_of.md  location_data.md  location_data_ext.md  (+44 more)
lib/sbi/gmlc-location/model/: accuracy_fulfilment_indicator.c  accuracy_fulfilment_indicator.h  any_type.c  area_event_info.h  area_event_info_addition.c  area_event_info_addition.h  area_event_info_ext.c  area_event_info_ext.h  gnss_id.c  (+136 more)
lib/sbi/lmf-location/: CMakeLists.txt  Makefile  README.md
(+21646 files in other folders)
