cmake_minimum_required (VERSION 2.6...3.10.2)
project (CGenerator)

cmake_policy(SET CMP0063 NEW)

set(CMAKE_C_VISIBILITY_PRESET default)
set(CMAKE_CXX_VISIBILITY_PRESET default)
set(CMAKE_VISIBILITY_INLINES_HIDDEN OFF)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)

option(BUILD_SHARED_LIBS "Build using shared libraries" ON)

find_package(OpenSSL)

if (OPENSSL_FOUND)
    message (STATUS "OPENSSL found")

    set(CMAKE_C_FLAGS "-DOPENSSL")
    if(CMAKE_VERSION VERSION_LESS 3.4)
        include_directories(${OPENSSL_INCLUDE_DIR})
        include_directories(${OPENSSL_INCLUDE_DIRS})
        link_directories(${OPENSSL_LIBRARIES})
    endif()

    message(STATUS "Using OpenSSL ${OPENSSL_VERSION}")
else()
    message (STATUS "OpenSSL Not found.")
endif()

set(pkgName "namf_communication")

# this default version can be overridden in PreTarget.cmake
set(PROJECT_VERSION_MAJOR 0)
set(PROJECT_VERSION_MINOR 0)
set(PROJECT_VERSION_PATCH 1)

if( (DEFINED CURL_INCLUDE_DIR) AND (DEFINED CURL_LIBRARIES))
    include_directories(${CURL_INCLUDE_DIR})
    set(PLATFORM_LIBRARIES ${PLATFORM_LIBRARIES} ${CURL_LIBRARIES} )
else()
    find_package(CURL 7.58.0 REQUIRED)
    if(CURL_FOUND)
        include_directories(${CURL_INCLUDE_DIR})
        set(PLATFORM_LIBRARIES ${PLATFORM_LIBRARIES} ${CURL_LIBRARIES} )
    else(CURL_FOUND)
        message(FATAL_ERROR "Could not find the CURL library and development files.")
    endif()
endif()

set(SRCS
    src/list.c
    src/apiKey.c
    src/apiClient.c
    src/binary.c
    external/cJSON.c
    model/object.c
    model/a2x_context.c
    model/a2x_information.c
    model/abnormal_behaviour.c
    model/access_token_err.c
    model/access_token_req.c
    model/access_type.c
    model/accuracy.c
    model/accuracy_any_of.c
    model/accuracy_info.c
    model/accuracy_req.c
    model/additional_measurement.c
    model/addr_fqdn.c
    model/address_list.c
    model/allowed_nssai.c
    model/allowed_snssai.c
    model/am_policy_info_container.c
    model/ambr.c
    model/amf_event.c
    model/amf_event_area.c
    model/amf_event_mode.c
    model/amf_event_mode_muting_exc_instructions.c
    model/amf_event_subscription.c
    model/amf_event_subscription_add_info.c
    model/amf_event_trigger.c
    model/amf_event_trigger_any_of.c
    model/amf_event_type.c
    model/amf_event_type_any_of.c
    model/amf_status_change_notification.c
    model/amf_status_info.c
    model/analytics_accuracy_indication.c
    model/analytics_accuracy_indication_any_of.c
    model/analytics_feedback_info.c
    model/analytics_metadata.c
    model/analytics_metadata_any_of.c
    model/analytics_metadata_indication.c
    model/analytics_metadata_info.c
    model/analytics_subscription.c
    model/analytics_subset.c
    model/analytics_subset_any_of.c
    model/app_list_for_ue_comm.c
    model/application_volume.c
    model/area.c
    model/area_of_interest_event_state.c
    model/area_of_validity.c
    model/area_scope.c
    model/arp.c
    model/as_time_distribution_param.c
    model/assign_ebi_data.c
    model/assign_ebi_error.c
    model/assign_ebi_failed.c
    model/assigned_ebi_data.c
    model/auth_status.c
    model/auth_status_any_of.c
    model/battery_indication.c
    model/buffered_notifications_action.c
    model/buffered_notifications_action_any_of.c
    model/bw_requirement.c
    model/cag_data.c
    model/cag_info.c
    model/cag_info_1.c
    model/cancel_relocate_ue_context_request.c
    model/candidate_for_replacement.c
    model/ce_mode_b_ind.c
    model/cell_global_id.c
    model/ciphering_algorithm.c
    model/circumstance_description.c
    model/civic_address.c
    model/class_criterion.c
    model/clock_quality.c
    model/clock_quality_acceptance_criterion.c
    model/clock_quality_detail_level.c
    model/clock_quality_detail_level_any_of.c
    model/cn_assisted_ran_para.c
    model/collection_period_rmm_lte_mdt.c
    model/collection_period_rmm_lte_mdt_any_of.c
    model/collection_period_rmm_nr_mdt.c
    model/collection_period_rmm_nr_mdt_any_of.c
    model/comb_gci_and_hfc_n_ids.c
    model/conditional_cag_info.c
    model/configured_snssai.c
    model/congestion_info.c
    model/congestion_type.c
    model/congestion_type_any_of.c
    model/consumer_nf_information.c
    model/core_network_type.c
    model/core_network_type_any_of.c
    model/create_ue_context_201_response.c
    model/create_ue_context_403_response.c
    model/create_ue_context_request.c
    model/data_volume.c
    model/data_volume_transfer_time.c
    model/dataset_statistical_property.c
    model/dataset_statistical_property_any_of.c
    model/ddd_traffic_descriptor.c
    model/dereg_inact_timer_info.c
    model/device_type.c
    model/device_type_any_of.c
    model/direction.c
    model/direction_any_of.c
    model/direction_info.c
    model/dispersion_area.c
    model/dispersion_class.c
    model/dispersion_class_one_of.c
    model/dispersion_collection.c
    model/dispersion_info.c
    model/dispersion_ordering_criterion.c
    model/dispersion_ordering_criterion_any_of.c
    model/dispersion_requirement.c
    model/dispersion_type.c
    model/dispersion_type_one_of.c
    model/dn_perf.c
    model/dn_perf_info.c
    model/dn_perf_ordering_criterion.c
    model/dn_perf_ordering_criterion_any_of.c
    model/dn_performance_req.c
    model/domain_name_protocol.c
    model/domain_name_protocol_any_of.c
    model/e2e_data_vol_trans_time_criterion.c
    model/e2e_data_vol_trans_time_criterion_any_of.c
    model/e2e_data_vol_trans_time_info.c
    model/e2e_data_vol_trans_time_per_ts.c
    model/e2e_data_vol_trans_time_per_ue.c
    model/e2e_data_vol_trans_time_req.c
    model/e2e_data_vol_trans_time_ue_list.c
    model/ebi_arp_mapping.c
    model/ec_restriction_data_wb.c
    model/ecgi.c
    model/ellipsoid_arc.c
    model/ellipsoid_arc_all_of.c
    model/eps_interworking_info.c
    model/eps_iwk_pgw.c
    model/eps_nas_ciphering_algorithm.c
    model/eps_nas_integrity_algorithm.c
    model/eps_nas_security_mode.c
    model/eth_flow_description.c
    model/eutra_location.c
    model/event_notification.c
    model/event_reporting_requirement.c
    model/event_subscription.c
    model/exception.c
    model/exception_id.c
    model/exception_id_any_of.c
    model/exception_trend.c
    model/exception_trend_any_of.c
    model/expected_analytics_type.c
    model/expected_analytics_type_any_of.c
    model/expected_ue_behavior.c
    model/expected_ue_behaviour_data.c
    model/ext_amf_event_subscription.c
    model/ext_snssai.c
    model/failure_event_info.c
    model/flow_direction.c
    model/flow_direction_any_of.c
    model/flow_info.c
    model/gad_shape.c
    model/geo_distribution_info.c
    model/geo_location.c
    model/geographic_area.c
    model/geographical_area.c
    model/geographical_coordinates.c
    model/gera_location.c
    model/global_ran_node_id.c
    model/gnb_id.c
    model/guami.c
    model/hfc_node_id.c
    model/horizontal_velocity.c
    model/horizontal_velocity_with_uncertainty.c
    model/horizontal_with_vertical_velocity.c
    model/horizontal_with_vertical_velocity_and_uncertainty.c
    model/immediate_mdt_conf.c
    model/integrity_algorithm.c
    model/invalid_param.c
    model/ip_addr.c
    model/ip_address.c
    model/ip_eth_flow_description.c
    model/ipv6_addr.c
    model/ipv6_prefix.c
    model/job_type.c
    model/job_type_any_of.c
    model/key_amf.c
    model/key_amf_type.c
    model/ladn_info.c
    model/lcs_up_context.c
    model/line_type.c
    model/line_type_any_of.c
    model/loc_accuracy_info.c
    model/loc_accuracy_per_method.c
    model/loc_accuracy_req.c
    model/loc_info_granularity.c
    model/loc_info_granularity_any_of.c
    model/local2d_point_uncertainty_ellipse.c
    model/local2d_point_uncertainty_ellipse_all_of.c
    model/local3d_point_uncertainty_ellipsoid.c
    model/local3d_point_uncertainty_ellipsoid_all_of.c
    model/local_origin.c
    model/location_area.c
    model/location_area_id.c
    model/location_filter.c
    model/location_filter_any_of.c
    model/location_info.c
    model/location_orientation.c
    model/location_orientation_any_of.c
    model/lte_a2x_auth.c
    model/lte_m_ind.c
    model/lte_v2x_auth.c
    model/matching_direction.c
    model/matching_direction_any_of.c
    model/mbsr_location_info.c
    model/mbsr_operation_allowed.c
    model/mbsr_time_info.c
    model/measurement_lte_for_mdt.c
    model/measurement_lte_for_mdt_any_of.c
    model/measurement_nr_for_mdt.c
    model/measurement_period_lte_mdt.c
    model/mm_context.c
    model/mo_exp_data_counter.c
    model/mov_behav.c
    model/mov_behav_info.c
    model/mov_behav_req.c
    model/muting_exception_instructions.c
    model/muting_notifications_settings.c
    model/n1_message_class.c
    model/n1_message_container.c
    model/n1_message_notification.c
    model/n1_n2_message_transfer_cause.c
    model/n1_n2_message_transfer_error.c
    model/n1_n2_message_transfer_req_data.c
    model/n1_n2_message_transfer_rsp_data.c
    model/n1_n2_msg_txfr_err_detail.c
    model/n1_n2_msg_txfr_failure_notification.c
    model/n2_info_container.c
    model/n2_info_content.c
    model/n2_info_notification_rsp_data.c
    model/n2_info_notify_handover_complete_200_response.c
    model/n2_info_notify_reason.c
    model/n2_info_notify_request.c
    model/n2_information_class.c
    model/n2_information_notification.c
    model/n2_information_transfer_error.c
    model/n2_information_transfer_req_data.c
    model/n2_information_transfer_result.c
    model/n2_information_transfer_rsp_data.c
    model/n2_ran_information.c
    model/n2_sm_information.c
    model/n3ga_location.c
    model/nas_security_mode.c
    model/ncgi.c
    model/network_area_info.c
    model/network_area_info_1.c
    model/network_perf_info.c
    model/network_perf_order_criterion.c
    model/network_perf_order_criterion_any_of.c
    model/network_perf_requirement.c
    model/network_perf_type.c
    model/network_perf_type_any_of.c
    model/nf_load_level_information.c
    model/nf_status.c
    model/nf_type.c
    model/nf_type_any_of.c
    model/ng_ap_cause.c
    model/ng_ksi.c
    model/ng_ran_target_id.c
    model/ngap_ie_type.c
    model/ngran_failure_info.c
    model/nid_info.c
    model/nnwdaf_events_subscription.c
    model/no_profile_match_info.c
    model/no_profile_match_reason.c
    model/no_profile_match_reason_any_of.c
    model/non_ue_n2_info_notify_request.c
    model/non_ue_n2_info_subscription_create_data.c
    model/non_ue_n2_info_subscription_created_data.c
    model/non_ue_n2_message_transfer_200_response.c
    model/non_ue_n2_message_transfer_request.c
    model/notification_flag.c
    model/notification_flag_any_of.c
    model/notification_method.c
    model/notification_method_1.c
    model/notification_method_1_any_of.c
    model/notification_method_any_of.c
    model/npn_access_info.c
    model/nr_a2x_auth.c
    model/nr_location.c
    model/nr_v2x_auth.c
    model/nrppa_information.c
    model/nsi_id_info.c
    model/nsi_information.c
    model/nsi_load_level_info.c
    model/nssaa_status.c
    model/nssai_mapping.c
    model/ntn_tai_info.c
    model/number_average.c
    model/nwdaf_event.c
    model/nwdaf_event_any_of.c
    model/nwdaf_failure_code.c
    model/nwdaf_failure_code_any_of.c
    model/nwdaf_subscription.c
    model/observed_redundant_trans_exp.c
    model/output_strategy.c
    model/output_strategy_any_of.c
    model/partially_allowed_snssai.c
    model/partitioning_criteria.c
    model/partitioning_criteria_any_of.c
    model/pc5_flow_bit_rates.c
    model/pc5_qo_s_para.c
    model/pc5_qos_flow_item.c
    model/pcf_ue_callback_info.c
    model/pdu_ses_traffic_info.c
    model/pdu_ses_traffic_req.c
    model/pdu_session_context.c
    model/pdu_session_info.c
    model/pdu_session_info_1.c
    model/pdu_session_type.c
    model/pdu_session_type_any_of.c
    model/perf_data.c
    model/periodic_communication_indicator.c
    model/pfd_determination_info.c
    model/plmn_id.c
    model/plmn_id_nid.c
    model/point.c
    model/point_all_of.c
    model/point_altitude.c
    model/point_altitude_all_of.c
    model/point_altitude_uncertainty.c
    model/point_altitude_uncertainty_all_of.c
    model/point_uncertainty_circle.c
    model/point_uncertainty_circle_all_of.c
    model/point_uncertainty_ellipse.c
    model/point_uncertainty_ellipse_all_of.c
    model/policy_req_trigger.c
    model/polygon.c
    model/polygon_all_of.c
    model/positioning_method.c
    model/positioning_method_any_of.c
    model/positioning_method_mdt.c
    model/positioning_method_mdt_any_of.c
    model/preemption_capability.c
    model/preemption_capability_any_of.c
    model/preemption_vulnerability.c
    model/preemption_vulnerability_any_of.c
    model/presence_info.c
    model/presence_state.c
    model/presence_state_any_of.c
    model/prev_sub_info.c
    model/pro_se_information.c
    model/problem_details.c
    model/prose_context.c
    model/proximity_criterion.c
    model/proximity_criterion_any_of.c
    model/pru_ind.c
    model/pru_ind_any_of.c
    model/pws_error_data.c
    model/pws_information.c
    model/pws_response_data.c
    model/qos_requirement.c
    model/qos_resource_type.c
    model/qos_resource_type_any_of.c
    model/qos_sustainability_info.c
    model/query_param_combination.c
    model/query_parameter.c
    model/ranking_criterion.c
    model/rat_freq_information.c
    model/rat_selector.c
    model/rat_type.c
    model/rat_type_any_of.c
    model/reachability_filter.c
    model/reachability_filter_any_of.c
    model/recur_time.c
    model/recur_type.c
    model/recur_type_any_of.c
    model/red_trans_exp_ordering_criterion.c
    model/red_trans_exp_ordering_criterion_any_of.c
    model/redirect_response.c
    model/redundant_transmission_exp_info.c
    model/redundant_transmission_exp_per_ts.c
    model/redundant_transmission_exp_req.c
    model/ref_to_binary_data.c
    model/registration_context_container.c
    model/rel_prox_info.c
    model/rel_prox_req.c
    model/relative_cartesian_location.c
    model/release_cause.c
    model/release_session_info.c
    model/relocate_ue_context_request.c
    model/report_amount_mdt.c
    model/report_amount_mdt_any_of.c
    model/report_interval_mdt.c
    model/report_interval_mdt_any_of.c
    model/report_interval_nr_mdt.c
    model/report_interval_nr_mdt_any_of.c
    model/reporting_information.c
    model/reporting_trigger.c
    model/reporting_trigger_any_of.c
    model/resource_usage.c
    model/resource_usage_requirement.c
    model/restriction_type.c
    model/restriction_type_any_of.c
    model/retainability_threshold.c
    model/roaming_info.c
    model/routing_area_id.c
    model/rslp_information.c
    model/satellite_backhaul_category.c
    model/satellite_backhaul_category_any_of.c
    model/sbi_binding_level.c
    model/sc_type.c
    model/scheduled_communication_time.c
    model/scheduled_communication_time_1.c
    model/scheduled_communication_type.c
    model/scheduled_communication_type_any_of.c
    model/sd_range.c
    model/seaf_data.c
    model/sensor_measurement.c
    model/sensor_measurement_any_of.c
    model/service_area_id.c
    model/service_area_restriction.c
    model/service_experience_info.c
    model/service_experience_type.c
    model/service_experience_type_any_of.c
    model/sess_inact_timer_for_ue_comm.c
    model/slice_load_level_information.c
    model/slice_mbr.c
    model/slice_replacement_mapping.c
    model/slice_usage_control_info.c
    model/small_data_rate_status.c
    model/small_data_rate_status_info.c
    model/smcce_info.c
    model/smcce_ue_list.c
    model/smf_change_indication.c
    model/smf_change_info.c
    model/smf_selection_data.c
    model/sms_support.c
    model/snssai.c
    model/snssai_dnn_item.c
    model/snssai_extension.c
    model/speed_threshold_info.c
    model/ssc_mode.c
    model/ssc_mode_any_of.c
    model/stationary_indication.c
    model/stationary_indication_any_of.c
    model/status_change.c
    model/subscription_action.c
    model/subscription_action_any_of.c
    model/subscription_data.c
    model/suggested_pfd_info.c
    model/supported_gad_shapes.c
    model/supported_gad_shapes_any_of.c
    model/svc_experience.c
    model/synchronization_state.c
    model/synchronization_state_any_of.c
    model/tac_info.c
    model/tac_range.c
    model/tai.c
    model/tai_range.c
    model/target_area.c
    model/target_ue_information.c
    model/td_traffic.c
    model/threshold_level.c
    model/time_source.c
    model/time_source_any_of.c
    model/time_to_collision_info.c
    model/time_unit.c
    model/time_unit_any_of.c
    model/time_window.c
    model/timestamped_location.c
    model/tnap_id.c
    model/top_application.c
    model/trace_data.c
    model/trace_depth.c
    model/trace_depth_any_of.c
    model/traffic_characterization.c
    model/traffic_descriptor.c
    model/traffic_direction.c
    model/traffic_direction_any_of.c
    model/traffic_information.c
    model/traffic_profile.c
    model/traffic_profile_any_of.c
    model/transfer_reason.c
    model/transport_protocol.c
    model/transport_protocol_any_of.c
    model/tss_information.c
    model/tss_rsp_per_ngran.c
    model/twap_id.c
    model/ue_analytics_context_descriptor.c
    model/ue_auth.c
    model/ue_auth_any_of.c
    model/ue_comm_order_criterion.c
    model/ue_comm_order_criterion_any_of.c
    model/ue_comm_req.c
    model/ue_communication.c
    model/ue_context.c
    model/ue_context_cancel_relocate_data.c
    model/ue_context_create_data.c
    model/ue_context_create_error.c
    model/ue_context_created_data.c
    model/ue_context_release.c
    model/ue_context_relocate_data.c
    model/ue_context_relocated_data.c
    model/ue_context_transfer_200_response.c
    model/ue_context_transfer_req_data.c
    model/ue_context_transfer_request.c
    model/ue_context_transfer_rsp_data.c
    model/ue_context_transfer_status.c
    model/ue_differentiation_info.c
    model/ue_in_area_filter.c
    model/ue_mobility.c
    model/ue_mobility_order_criterion.c
    model/ue_mobility_order_criterion_any_of.c
    model/ue_mobility_req.c
    model/ue_n1_n2_info_subscription_create_data.c
    model/ue_n1_n2_info_subscription_created_data.c
    model/ue_proximity.c
    model/ue_reg_status_update_req_data.c
    model/ue_reg_status_update_rsp_data.c
    model/ue_trajectory.c
    model/ue_type.c
    model/ue_type_any_of.c
    model/umt_time.c
    model/uncertainty_ellipse.c
    model/uncertainty_ellipsoid.c
    model/up_connection_status.c
    model/up_connection_status_any_of.c
    model/updp_subscription_data.c
    model/upf_information.c
    model/user_data_con_order_crit.c
    model/user_data_con_order_crit_any_of.c
    model/user_data_congestion_info.c
    model/user_location.c
    model/utra_location.c
    model/uuaa_mm_status.c
    model/v2x_context.c
    model/v2x_information.c
    model/valid_time_period.c
    model/value_expression.c
    model/value_expression_any_of.c
    model/var_rep_period.c
    model/velocity_estimate.c
    model/vertical_direction.c
    model/wireline_area.c
    model/wireline_service_area_restriction.c
    model/wlan_ordering_criterion.c
    model/wlan_ordering_criterion_any_of.c
    model/wlan_per_ss_id_performance_info.c
    model/wlan_per_ts_performance_info.c
    model/wlan_per_ue_id_performance_info.c
    model/wlan_performance_info.c
    model/wlan_performance_req.c
    api/IndividualSubscriptionDocumentAPI.c
    api/IndividualUeContextDocumentAPI.c
    api/N1N2IndividualSubscriptionDocumentAPI.c
    api/N1N2MessageCollectionCollectionAPI.c
    api/N1N2SubscriptionsCollectionForIndividualUEContextsCollectionAPI.c
    api/NonUEN2MessageNotificationIndividualSubscriptionDocumentAPI.c
    api/NonUEN2MessagesCollectionCollectionAPI.c
    api/NonUEN2MessagesSubscriptionsCollectionCollectionAPI.c
    api/SubscriptionsCollectionCollectionAPI.c

)

set(HDRS
    include/apiClient.h
    include/list.h
    include/binary.h
    include/keyValuePair.h
    external/cJSON.h
    model/object.h
    model/a2x_context.h
    model/a2x_information.h
    model/abnormal_behaviour.h
    model/access_token_err.h
    model/access_token_req.h
    model/access_type.h
    model/accuracy.h
    model/accuracy_any_of.h
    model/accuracy_info.h
    model/accuracy_req.h
    model/additional_measurement.h
    model/addr_fqdn.h
    model/address_list.h
    model/allowed_nssai.h
    model/allowed_snssai.h
    model/am_policy_info_container.h
    model/ambr.h
    model/amf_event.h
    model/amf_event_area.h
    model/amf_event_mode.h
    model/amf_event_mode_muting_exc_instructions.h
    model/amf_event_subscription.h
    model/amf_event_subscription_add_info.h
    model/amf_event_trigger.h
    model/amf_event_trigger_any_of.h
    model/amf_event_type.h
    model/amf_event_type_any_of.h
    model/amf_status_change_notification.h
    model/amf_status_info.h
    model/analytics_accuracy_indication.h
    model/analytics_accuracy_indication_any_of.h
    model/analytics_feedback_info.h
    model/analytics_metadata.h
    model/analytics_metadata_any_of.h
    model/analytics_metadata_indication.h
    model/analytics_metadata_info.h
    model/analytics_subscription.h
    model/analytics_subset.h
    model/analytics_subset_any_of.h
    model/app_list_for_ue_comm.h
    model/application_volume.h
    model/area.h
    model/area_of_interest_event_state.h
    model/area_of_validity.h
    model/area_scope.h
    model/arp.h
    model/as_time_distribution_param.h
    model/assign_ebi_data.h
    model/assign_ebi_error.h
    model/assign_ebi_failed.h
    model/assigned_ebi_data.h
    model/auth_status.h
    model/auth_status_any_of.h
    model/battery_indication.h
    model/buffered_notifications_action.h
    model/buffered_notifications_action_any_of.h
    model/bw_requirement.h
    model/cag_data.h
    model/cag_info.h
    model/cag_info_1.h
    model/cancel_relocate_ue_context_request.h
    model/candidate_for_replacement.h
    model/ce_mode_b_ind.h
    model/cell_global_id.h
    model/ciphering_algorithm.h
    model/circumstance_description.h
    model/civic_address.h
    model/class_criterion.h
    model/clock_quality.h
    model/clock_quality_acceptance_criterion.h
    model/clock_quality_detail_level.h
    model/clock_quality_detail_level_any_of.h
    model/cn_assisted_ran_para.h
    model/collection_period_rmm_lte_mdt.h
    model/collection_period_rmm_lte_mdt_any_of.h
    model/collection_period_rmm_nr_mdt.h
    model/collection_period_rmm_nr_mdt_any_of.h
    model/comb_gci_and_hfc_n_ids.h
    model/conditional_cag_info.h
    model/configured_snssai.h
    model/congestion_info.h
    model/congestion_type.h
    model/congestion_type_any_of.h
    model/consumer_nf_information.h
    model/core_network_type.h
    model/core_network_type_any_of.h
    model/create_ue_context_201_response.h
    model/create_ue_context_403_response.h
    model/create_ue_context_request.h
    model/data_volume.h
    model/data_volume_transfer_time.h
    model/dataset_statistical_property.h
    model/dataset_statistical_property_any_of.h
    model/ddd_traffic_descriptor.h
    model/dereg_inact_timer_info.h
    model/device_type.h
    model/device_type_any_of.h
    model/direction.h
    model/direction_any_of.h
    model/direction_info.h
    model/dispersion_area.h
    model/dispersion_class.h
    model/dispersion_class_one_of.h
    model/dispersion_collection.h
    model/dispersion_info.h
    model/dispersion_ordering_criterion.h
    model/dispersion_ordering_criterion_any_of.h
    model/dispersion_requirement.h
    model/dispersion_type.h
    model/dispersion_type_one_of.h
    model/dn_perf.h
    model/dn_perf_info.h
    model/dn_perf_ordering_criterion.h
    model/dn_perf_ordering_criterion_any_of.h
    model/dn_performance_req.h
    model/domain_name_protocol.h
    model/domain_name_protocol_any_of.h
    model/e2e_data_vol_trans_time_criterion.h
    model/e2e_data_vol_trans_time_criterion_any_of.h
    model/e2e_data_vol_trans_time_info.h
    model/e2e_data_vol_trans_time_per_ts.h
    model/e2e_data_vol_trans_time_per_ue.h
    model/e2e_data_vol_trans_time_req.h
    model/e2e_data_vol_trans_time_ue_list.h
    model/ebi_arp_mapping.h
    model/ec_restriction_data_wb.h
    model/ecgi.h
    model/ellipsoid_arc.h
    model/ellipsoid_arc_all_of.h
    model/eps_interworking_info.h
    model/eps_iwk_pgw.h
    model/eps_nas_ciphering_algorithm.h
    model/eps_nas_integrity_algorithm.h
    model/eps_nas_security_mode.h
    model/eth_flow_description.h
    model/eutra_location.h
    model/event_notification.h
    model/event_reporting_requirement.h
    model/event_subscription.h
    model/exception.h
    model/exception_id.h
    model/exception_id_any_of.h
    model/exception_trend.h
    model/exception_trend_any_of.h
    model/expected_analytics_type.h
    model/expected_analytics_type_any_of.h
    model/expected_ue_behavior.h
    model/expected_ue_behaviour_data.h
    model/ext_amf_event_subscription.h
    model/ext_snssai.h
    model/failure_event_info.h
    model/flow_direction.h
    model/flow_direction_any_of.h
    model/flow_info.h
    model/gad_shape.h
    model/geo_distribution_info.h
    model/geo_location.h
    model/geographic_area.h
    model/geographical_area.h
    model/geographical_coordinates.h
    model/gera_location.h
    model/global_ran_node_id.h
    model/gnb_id.h
    model/guami.h
    model/hfc_node_id.h
    model/horizontal_velocity.h
    model/horizontal_velocity_with_uncertainty.h
    model/horizontal_with_vertical_velocity.h
    model/horizontal_with_vertical_velocity_and_uncertainty.h
    model/immediate_mdt_conf.h
    model/integrity_algorithm.h
    model/invalid_param.h
    model/ip_addr.h
    model/ip_address.h
    model/ip_eth_flow_description.h
    model/ipv6_addr.h
    model/ipv6_prefix.h
    model/job_type.h
    model/job_type_any_of.h
    model/key_amf.h
    model/key_amf_type.h
    model/ladn_info.h
    model/lcs_up_context.h
    model/line_type.h
    model/line_type_any_of.h
    model/loc_accuracy_info.h
    model/loc_accuracy_per_method.h
    model/loc_accuracy_req.h
    model/loc_info_granularity.h
    model/loc_info_granularity_any_of.h
    model/local2d_point_uncertainty_ellipse.h
    model/local2d_point_uncertainty_ellipse_all_of.h
    model/local3d_point_uncertainty_ellipsoid.h
    model/local3d_point_uncertainty_ellipsoid_all_of.h
    model/local_origin.h
    model/location_area.h
    model/location_area_id.h
    model/location_filter.h
    model/location_filter_any_of.h
    model/location_info.h
    model/location_orientation.h
    model/location_orientation_any_of.h
    model/lte_a2x_auth.h
    model/lte_m_ind.h
    model/lte_v2x_auth.h
    model/matching_direction.h
    model/matching_direction_any_of.h
    model/mbsr_location_info.h
    model/mbsr_operation_allowed.h
    model/mbsr_time_info.h
    model/measurement_lte_for_mdt.h
    model/measurement_lte_for_mdt_any_of.h
    model/measurement_nr_for_mdt.h
    model/measurement_period_lte_mdt.h
    model/mm_context.h
    model/mo_exp_data_counter.h
    model/mov_behav.h
    model/mov_behav_info.h
    model/mov_behav_req.h
    model/muting_exception_instructions.h
    model/muting_notifications_settings.h
    model/n1_message_class.h
    model/n1_message_container.h
    model/n1_message_notification.h
    model/n1_n2_message_transfer_cause.h
    model/n1_n2_message_transfer_error.h
    model/n1_n2_message_transfer_req_data.h
    model/n1_n2_message_transfer_rsp_data.h
    model/n1_n2_msg_txfr_err_detail.h
    model/n1_n2_msg_txfr_failure_notification.h
    model/n2_info_container.h
    model/n2_info_content.h
    model/n2_info_notification_rsp_data.h
    model/n2_info_notify_handover_complete_200_response.h
    model/n2_info_notify_reason.h
    model/n2_info_notify_request.h
    model/n2_information_class.h
    model/n2_information_notification.h
    model/n2_information_transfer_error.h
    model/n2_information_transfer_req_data.h
    model/n2_information_transfer_result.h
    model/n2_information_transfer_rsp_data.h
    model/n2_ran_information.h
    model/n2_sm_information.h
    model/n3ga_location.h
    model/nas_security_mode.h
    model/ncgi.h
    model/network_area_info.h
    model/network_area_info_1.h
    model/network_perf_info.h
    model/network_perf_order_criterion.h
    model/network_perf_order_criterion_any_of.h
    model/network_perf_requirement.h
    model/network_perf_type.h
    model/network_perf_type_any_of.h
    model/nf_load_level_information.h
    model/nf_status.h
    model/nf_type.h
    model/nf_type_any_of.h
    model/ng_ap_cause.h
    model/ng_ksi.h
    model/ng_ran_target_id.h
    model/ngap_ie_type.h
    model/ngran_failure_info.h
    model/nid_info.h
    model/nnwdaf_events_subscription.h
    model/no_profile_match_info.h
    model/no_profile_match_reason.h
    model/no_profile_match_reason_any_of.h
    model/non_ue_n2_info_notify_request.h
    model/non_ue_n2_info_subscription_create_data.h
    model/non_ue_n2_info_subscription_created_data.h
    model/non_ue_n2_message_transfer_200_response.h
    model/non_ue_n2_message_transfer_request.h
    model/notification_flag.h
    model/notification_flag_any_of.h
    model/notification_method.h
    model/notification_method_1.h
    model/notification_method_1_any_of.h
    model/notification_method_any_of.h
    model/npn_access_info.h
    model/nr_a2x_auth.h
    model/nr_location.h
    model/nr_v2x_auth.h
    model/nrppa_information.h
    model/nsi_id_info.h
    model/nsi_information.h
    model/nsi_load_level_info.h
    model/nssaa_status.h
    model/nssai_mapping.h
    model/ntn_tai_info.h
    model/number_average.h
    model/nwdaf_event.h
    model/nwdaf_event_any_of.h
    model/nwdaf_failure_code.h
    model/nwdaf_failure_code_any_of.h
    model/nwdaf_subscription.h
    model/observed_redundant_trans_exp.h
    model/output_strategy.h
    model/output_strategy_any_of.h
    model/partially_allowed_snssai.h
    model/partitioning_criteria.h
    model/partitioning_criteria_any_of.h
    model/pc5_flow_bit_rates.h
    model/pc5_qo_s_para.h
    model/pc5_qos_flow_item.h
    model/pcf_ue_callback_info.h
    model/pdu_ses_traffic_info.h
    model/pdu_ses_traffic_req.h
    model/pdu_session_context.h
    model/pdu_session_info.h
    model/pdu_session_info_1.h
    model/pdu_session_type.h
    model/pdu_session_type_any_of.h
    model/perf_data.h
    model/periodic_communication_indicator.h
    model/pfd_determination_info.h
    model/plmn_id.h
    model/plmn_id_nid.h
    model/point.h
    model/point_all_of.h
    model/point_altitude.h
    model/point_altitude_all_of.h
    model/point_altitude_uncertainty.h
    model/point_altitude_uncertainty_all_of.h
    model/point_uncertainty_circle.h
    model/point_uncertainty_circle_all_of.h
    model/point_uncertainty_ellipse.h
    model/point_uncertainty_ellipse_all_of.h
    model/policy_req_trigger.h
    model/polygon.h
    model/polygon_all_of.h
    model/positioning_method.h
    model/positioning_method_any_of.h
    model/positioning_method_mdt.h
    model/positioning_method_mdt_any_of.h
    model/preemption_capability.h
    model/preemption_capability_any_of.h
    model/preemption_vulnerability.h
    model/preemption_vulnerability_any_of.h
    model/presence_info.h
    model/presence_state.h
    model/presence_state_any_of.h
    model/prev_sub_info.h
    model/pro_se_information.h
    model/problem_details.h
    model/prose_context.h
    model/proximity_criterion.h
    model/proximity_criterion_any_of.h
    model/pru_ind.h
    model/pru_ind_any_of.h
    model/pws_error_data.h
    model/pws_information.h
    model/pws_response_data.h
    model/qos_requirement.h
    model/qos_resource_type.h
    model/qos_resource_type_any_of.h
    model/qos_sustainability_info.h
    model/query_param_combination.h
    model/query_parameter.h
    model/ranking_criterion.h
    model/rat_freq_information.h
    model/rat_selector.h
    model/rat_type.h
    model/rat_type_any_of.h
    model/reachability_filter.h
    model/reachability_filter_any_of.h
    model/recur_time.h
    model/recur_type.h
    model/recur_type_any_of.h
    model/red_trans_exp_ordering_criterion.h
    model/red_trans_exp_ordering_criterion_any_of.h
    model/redirect_response.h
    model/redundant_transmission_exp_info.h
    model/redundant_transmission_exp_per_ts.h
    model/redundant_transmission_exp_req.h
    model/ref_to_binary_data.h
    model/registration_context_container.h
    model/rel_prox_info.h
    model/rel_prox_req.h
    model/relative_cartesian_location.h
    model/release_cause.h
    model/release_session_info.h
    model/relocate_ue_context_request.h
    model/report_amount_mdt.h
    model/report_amount_mdt_any_of.h
    model/report_interval_mdt.h
    model/report_interval_mdt_any_of.h
    model/report_interval_nr_mdt.h
    model/report_interval_nr_mdt_any_of.h
    model/reporting_information.h
    model/reporting_trigger.h
    model/reporting_trigger_any_of.h
    model/resource_usage.h
    model/resource_usage_requirement.h
    model/restriction_type.h
    model/restriction_type_any_of.h
    model/retainability_threshold.h
    model/roaming_info.h
    model/routing_area_id.h
    model/rslp_information.h
    model/satellite_backhaul_category.h
    model/satellite_backhaul_category_any_of.h
    model/sbi_binding_level.h
    model/sc_type.h
    model/scheduled_communication_time.h
    model/scheduled_communication_time_1.h
    model/scheduled_communication_type.h
    model/scheduled_communication_type_any_of.h
    model/sd_range.h
    model/seaf_data.h
    model/sensor_measurement.h
    model/sensor_measurement_any_of.h
    model/service_area_id.h
    model/service_area_restriction.h
    model/service_experience_info.h
    model/service_experience_type.h
    model/service_experience_type_any_of.h
    model/sess_inact_timer_for_ue_comm.h
    model/slice_load_level_information.h
    model/slice_mbr.h
    model/slice_replacement_mapping.h
    model/slice_usage_control_info.h
    model/small_data_rate_status.h
    model/small_data_rate_status_info.h
    model/smcce_info.h
    model/smcce_ue_list.h
    model/smf_change_indication.h
    model/smf_change_info.h
    model/smf_selection_data.h
    model/sms_support.h
    model/snssai.h
    model/snssai_dnn_item.h
    model/snssai_extension.h
    model/speed_threshold_info.h
    model/ssc_mode.h
    model/ssc_mode_any_of.h
    model/stationary_indication.h
    model/stationary_indication_any_of.h
    model/status_change.h
    model/subscription_action.h
    model/subscription_action_any_of.h
    model/subscription_data.h
    model/suggested_pfd_info.h
    model/supported_gad_shapes.h
    model/supported_gad_shapes_any_of.h
    model/svc_experience.h
    model/synchronization_state.h
    model/synchronization_state_any_of.h
    model/tac_info.h
    model/tac_range.h
    model/tai.h
    model/tai_range.h
    model/target_area.h
    model/target_ue_information.h
    model/td_traffic.h
    model/threshold_level.h
    model/time_source.h
    model/time_source_any_of.h
    model/time_to_collision_info.h
    model/time_unit.h
    model/time_unit_any_of.h
    model/time_window.h
    model/timestamped_location.h
    model/tnap_id.h
    model/top_application.h
    model/trace_data.h
    model/trace_depth.h
    model/trace_depth_any_of.h
    model/traffic_characterization.h
    model/traffic_descriptor.h
    model/traffic_direction.h
    model/traffic_direction_any_of.h
    model/traffic_information.h
    model/traffic_profile.h
    model/traffic_profile_any_of.h
    model/transfer_reason.h
    model/transport_protocol.h
    model/transport_protocol_any_of.h
    model/tss_information.h
    model/tss_rsp_per_ngran.h
    model/twap_id.h
    model/ue_analytics_context_descriptor.h
    model/ue_auth.h
    model/ue_auth_any_of.h
    model/ue_comm_order_criterion.h
    model/ue_comm_order_criterion_any_of.h
    model/ue_comm_req.h
    model/ue_communication.h
    model/ue_context.h
    model/ue_context_cancel_relocate_data.h
    model/ue_context_create_data.h
    model/ue_context_create_error.h
    model/ue_context_created_data.h
    model/ue_context_release.h
    model/ue_context_relocate_data.h
    model/ue_context_relocated_data.h
    model/ue_context_transfer_200_response.h
    model/ue_context_transfer_req_data.h
    model/ue_context_transfer_request.h
    model/ue_context_transfer_rsp_data.h
    model/ue_context_transfer_status.h
    model/ue_differentiation_info.h
    model/ue_in_area_filter.h
    model/ue_mobility.h
    model/ue_mobility_order_criterion.h
    model/ue_mobility_order_criterion_any_of.h
    model/ue_mobility_req.h
    model/ue_n1_n2_info_subscription_create_data.h
    model/ue_n1_n2_info_subscription_created_data.h
    model/ue_proximity.h
    model/ue_reg_status_update_req_data.h
    model/ue_reg_status_update_rsp_data.h
    model/ue_trajectory.h
    model/ue_type.h
    model/ue_type_any_of.h
    model/umt_time.h
    model/uncertainty_ellipse.h
    model/uncertainty_ellipsoid.h
    model/up_connection_status.h
    model/up_connection_status_any_of.h
    model/updp_subscription_data.h
    model/upf_information.h
    model/user_data_con_order_crit.h
    model/user_data_con_order_crit_any_of.h
    model/user_data_congestion_info.h
    model/user_location.h
    model/utra_location.h
    model/uuaa_mm_status.h
    model/v2x_context.h
    model/v2x_information.h
    model/valid_time_period.h
    model/value_expression.h
    model/value_expression_any_of.h
    model/var_rep_period.h
    model/velocity_estimate.h
    model/vertical_direction.h
    model/wireline_area.h
    model/wireline_service_area_restriction.h
    model/wlan_ordering_criterion.h
    model/wlan_ordering_criterion_any_of.h
    model/wlan_per_ss_id_performance_info.h
    model/wlan_per_ts_performance_info.h
    model/wlan_per_ue_id_performance_info.h
    model/wlan_performance_info.h
    model/wlan_performance_req.h
    api/IndividualSubscriptionDocumentAPI.h
    api/IndividualUeContextDocumentAPI.h
    api/N1N2IndividualSubscriptionDocumentAPI.h
    api/N1N2MessageCollectionCollectionAPI.h
    api/N1N2SubscriptionsCollectionForIndividualUEContextsCollectionAPI.h
    api/NonUEN2MessageNotificationIndividualSubscriptionDocumentAPI.h
    api/NonUEN2MessagesCollectionCollectionAPI.h
    api/NonUEN2MessagesSubscriptionsCollectionCollectionAPI.h
    api/SubscriptionsCollectionCollectionAPI.h

)

include(PreTarget.cmake OPTIONAL)

set(PROJECT_VERSION_STRING "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}")

# Add library with project file with project name as library name
add_library(${pkgName} ${SRCS} ${HDRS})
# Link dependent libraries
if(NOT CMAKE_VERSION VERSION_LESS 3.4)
    target_link_libraries(${pkgName} PRIVATE OpenSSL::SSL OpenSSL::Crypto)
endif()
target_link_libraries(${pkgName} PUBLIC ${CURL_LIBRARIES} )
target_include_directories(
    ${pkgName} PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>
    $<INSTALL_INTERFACE:include>
)

include(PostTarget.cmake OPTIONAL)

# installation of libraries, headers, and config files
if (NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/Config.cmake.in)
    install(TARGETS ${pkgName} DESTINATION lib)
else()
    include(GNUInstallDirs)
    install(TARGETS ${pkgName} DESTINATION lib EXPORT ${pkgName}Targets)

    foreach(HDR_FILE ${HDRS})
        get_filename_component(HDR_DIRECTORY ${HDR_FILE} DIRECTORY)
        get_filename_component(ABSOLUTE_HDR_DIRECTORY ${HDR_DIRECTORY} ABSOLUTE)
        file(RELATIVE_PATH RELATIVE_HDR_PATH ${CMAKE_CURRENT_SOURCE_DIR} ${ABSOLUTE_HDR_DIRECTORY})
        install(FILES ${HDR_FILE} DESTINATION include/${pkgName}/${RELATIVE_HDR_PATH})
    endforeach()

    include(CMakePackageConfigHelpers)
    write_basic_package_version_file(
            "${CMAKE_CURRENT_BINARY_DIR}/${pkgName}/${pkgName}ConfigVersion.cmake"
            VERSION "${PROJECT_VERSION_STRING}"
            COMPATIBILITY AnyNewerVersion
    )

    export(EXPORT ${pkgName}Targets
            FILE "${CMAKE_CURRENT_BINARY_DIR}/${pkgName}/${pkgName}Targets.cmake"
            NAMESPACE ${pkgName}::
            )

    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Config.cmake.in
            "${CMAKE_CURRENT_BINARY_DIR}/${pkgName}/${pkgName}Config.cmake"
            @ONLY
            )

    set(ConfigPackageLocation lib/cmake/${pkgName})
    install(EXPORT ${pkgName}Targets
            FILE
            ${pkgName}Targets.cmake
            NAMESPACE
            ${pkgName}::
            DESTINATION
            ${ConfigPackageLocation}
            )
    install(
            FILES
            "${CMAKE_CURRENT_BINARY_DIR}/${pkgName}/${pkgName}Config.cmake"
            "${CMAKE_CURRENT_BINARY_DIR}/${pkgName}/${pkgName}ConfigVersion.cmake"
            DESTINATION
            ${ConfigPackageLocation}
    )
endif()

# make installation packages
include(Packing.cmake OPTIONAL)

# Setting file variables to null
set(SRCS "")
set(HDRS "")


## This section shows how to use the above compiled library to compile the source files
## set source files
#set(SRCS
#    unit-tests/manual-IndividualSubscriptionDocumentAPI.c
#    unit-tests/manual-IndividualUeContextDocumentAPI.c
#    unit-tests/manual-N1N2IndividualSubscriptionDocumentAPI.c
#    unit-tests/manual-N1N2MessageCollectionCollectionAPI.c
#    unit-tests/manual-N1N2SubscriptionsCollectionForIndividualUEContextsCollectionAPI.c
#    unit-tests/manual-NonUEN2MessageNotificationIndividualSubscriptionDocumentAPI.c
#    unit-tests/manual-NonUEN2MessagesCollectionCollectionAPI.c
#    unit-tests/manual-NonUEN2MessagesSubscriptionsCollectionCollectionAPI.c
#    unit-tests/manual-SubscriptionsCollectionCollectionAPI.c
#)

##set header files
#set(HDRS
#)

## loop over all files in SRCS variable
#foreach(SOURCE_FILE ${SRCS})
#    # Get only the file name from the file as add_executable does not support executable with slash("/")
#    get_filename_component(FILE_NAME_ONLY ${SOURCE_FILE} NAME_WE)
#    # Remove .c from the file name and set it as executable name
#    string( REPLACE ".c" "" EXECUTABLE_FILE ${FILE_NAME_ONLY})
#    # Add executable for every source file in  SRCS
#    add_executable(unit-${EXECUTABLE_FILE} ${SOURCE_FILE})
#    # Link above created library to executable and dependent library curl
#    target_link_libraries(unit-${EXECUTABLE_FILE} ${CURL_LIBRARIES} ${pkgName} )
#endforeach(SOURCE_FILE ${SRCS})
